--- a/Presentation/DreamLuso.Angular/src/app/components/front-office/layout/header/header.component.html
+++ b/Presentation/DreamLuso.Angular/src/app/components/front-office/layout/header/header.component.html
@@ -24,7 +24,10 @@
 
         <ul class="flex h-full items-center justify-center space-x-10">
           <li class="flex h-14 items-center justify-center rounded-full border border-white/50 px-10">
-            <a class="text-sm font-medium text-white" href="Register">Sign Up</a>
+            <a class="text-sm font-medium text-white" href="/register">Sign Up</a>
+          </li>
+          <li class="flex h-14 items-center justify-center rounded-full border border-white/50 px-10">
+            <a  class="text-sm font-medium text-white" href="/login">Log In</a>
           </li>
           <li class="flex h-14 w-14 items-center justify-center rounded-full bg-white">
             <a href="/" title="Menu">
@@ -34,6 +37,7 @@
             </a>
           </li>
         </ul>
+
       </nav>
 
       <div id="wrapper" class="relative flex h-full items-end justify-between gap-10">
