--- a/Presentation/DreamLuso.Angular/src/app/components/front-office/layout/header/header.component.html
+++ b/Presentation/DreamLuso.Angular/src/app/components/front-office/layout/header/header.component.html
@@ -8,14 +8,14 @@
   </div>
 
   <!-- Conteúdo sobre o vídeo -->
-  <div id="header-child" class="relative flex grow flex-col overflow-hidden rounded-3xl bg-neutral-200 bg-opacity-75 z-10">
+  <div id="header-child" class="relative flex grow flex-col overflow-hidden rounded-3xl bg-neutral-800 bg-opacity-60 z-10">
     <div id="hero" class="relative z-10 flex grow flex-col p-10">
       <nav class="flex h-14 items-center justify-between">
-        <div id="logo" class="text-2xl font-semibold text-white">
+        <div id="logo" class="text-2xl font-semibold text-neutral-100">
           <span>DreamLuso</span>
         </div>
 
-        <ul id="menu" class="flex h-full items-center justify-center space-x-10 rounded-full bg-white px-10 text-sm font-medium text-neutral-800">
+        <ul id="menu" class="flex h-full items-center justify-center space-x-10 rounded-full bg-white/10 px-10 text-sm font-medium text-neutral-200">
           <li><a href="/" title="Properties">Properties</a></li>
           <li><a href="/" title="Services">Rent</a></li>
           <li><a href="/" title="Properties">Buy</a></li>
@@ -23,15 +23,15 @@
         </ul>
 
         <ul class="flex h-full items-center justify-center space-x-10">
-          <li class="flex h-14 items-center justify-center rounded-full border border-white/50 px-10">
-            <a class="text-sm font-medium text-white" href="/register">Sign Up</a>
+          <li class="flex h-14 items-center justify-center rounded-full border border-neutral-100/50 px-10">
+            <a class="text-sm font-medium text-neutral-100" href="/register">Sign Up</a>
           </li>
-          <li class="flex h-14 items-center justify-center rounded-full border border-white/50 px-10">
-            <a  class="text-sm font-medium text-white" href="/login">Log In</a>
+          <li class="flex h-14 items-center justify-center rounded-full border border-neutral-100/50 px-10">
+            <a class="text-sm font-medium text-neutral-100" href="/login">Log In</a>
           </li>
           <li class="flex h-14 w-14 items-center justify-center rounded-full bg-white">
             <a href="/" title="Menu">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-6 w-6 fill-neutral-800">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-6 w-6 text-neutral-800">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
               </svg>
             </a>
@@ -42,15 +42,15 @@
 
       <div id="wrapper" class="relative flex h-full items-end justify-between gap-10">
         <div class="max-w-screen-xl">
-          <div class="relative text-9xl uppercase text-neutral-100">
+          <div class="relative text-8xl uppercase text-neutral-100">
             <h1>We Have</h1>
             <h1 class="font-bold">The Perfect Property</h1>
             <h1>For you!</h1>
           </div>
         </div>
         <div class="flex grow items-end justify-end">
-          <div class="relative aspect-video h-full w-2/3 rounded-3xl bg-white p-10">
-            <button class="absolute -left-12 -top-12 z-10 flex h-24 w-24 items-center justify-center rounded-full bg-white">
+          <div class="relative aspect-video h-full w-2/3 rounded-3xl bg-white p-10 shadow-lg">
+            <button class="absolute -left-12 -top-12 z-10 flex h-24 w-24 items-center justify-center rounded-full bg-neutral-100 shadow-lg">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="h-6 w-6 text-neutral-800">
                 <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
               </svg>
@@ -68,163 +68,52 @@
   </div>
 </section>
 
+<section class="relative bg-neutral-900">
+  <marquee id="appear" loop="infinite" behavior="scroll" direction="left" scrollamount="25" class="font-inter text-8xl font-black uppercase tracking-tight text-white absolute top-0">Discover homes that fit your lifestyle.</marquee>
+  <h3 id="appear" class="tracking-tight mb-5 font-inter text-6xl font-black uppercase text-neutral-100 p-5 pt-64">
+    Our Selection
+  </h3>
 
-
-<section id="" class="relative w-full font-inter">
-  <marquee loop="infinite" behavior="scroll" direction="left" scrollamount="25" class="text-[182px] font-bold text-blue-600">Discover homes that fit your lifestyle.</marquee>
-
-  <div class="relative mx-auto my-32 max-w-screen-2xl">
-    <div class="my-10">
-      <span class="block pb-2 text-lg text-neutral-500">Featured Property</span>
-      <h2 class="max-w-screen-lg text-5xl font-bold text-neutral-800">Browse through a diverse collection of homes designed to fit your lifestyle seamlessly.</h2>
-    </div>
-    <div class="mt-10 grid grid-cols-3 gap-10">
-      <div id="property" class="relative col-span-1 aspect-[3/4] rounded-3xl bg-neutral-900">
-        <div class="aspect-[3/4] h-full overflow-hidden rounded-3xl bg-neutral-900">
-          <img src="https://images.pexels.com/photos/259588/pexels-photo-259588.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" srcset="" class="h-full object-cover" />
-        </div>
-        <div class="absolute bottom-0 flex h-full flex-col justify-end rounded-3xl bg-gradient-to-t from-neutral-900 p-10 opacity-0 duration-150 hover:opacity-100">
-          <h1 class="text-4xl font-bold text-slate-200">Serene Sunset Villa</h1>
-          <div class="mt-5 text-sm text-slate-300">Discover the allure of the Serene Sunset Villa, a contemporary haven nestled amidst lush landscapes and offering panoramic views of the ocean...</div>
-
-          <ul class="mt-5 flex justify-around">
-            <li class="flex items-center space-x-2">
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-bed text-white" width="22" height="22" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <path d="M7 9m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
-                <path d="M22 17v-3h-20" />
-                <path d="M2 8v9" />
-                <path d="M12 14h10v-2a3 3 0 0 0 -3 -3h-7v5z" />
-              </svg>
-              <span class="text-sm font-medium text-slate-300">4</span>
-            </li>
-            <li class="flex items-center space-x-2">
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-bath text-white" width="18" height="18" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <path d="M4 12h16a1 1 0 0 1 1 1v3a4 4 0 0 1 -4 4h-10a4 4 0 0 1 -4 -4v-3a1 1 0 0 1 1 -1z" />
-                <path d="M6 12v-7a2 2 0 0 1 2 -2h3v2.25" />
-                <path d="M4 21l1 -1.5" />
-                <path d="M20 21l-1 -1.5" />
-              </svg>
-              <span class="text-sm font-medium text-slate-300">3</span>
-            </li>
-            <li class="flex items-center space-x-2">
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-maximize text-white" width="18" height="18" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <path d="M4 8v-2a2 2 0 0 1 2 -2h2" />
-                <path d="M4 16v2a2 2 0 0 0 2 2h2" />
-                <path d="M16 4h2a2 2 0 0 1 2 2v2" />
-                <path d="M16 20h2a2 2 0 0 0 2 -2v-2" />
-              </svg>
-              <span class="text-sm font-medium text-slate-300">230m</span>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div id="property" class="relative col-span-1 aspect-[3/4] rounded-3xl bg-neutral-900">
-        <div class="aspect-[3/4] h-full overflow-hidden rounded-3xl bg-neutral-900">
-          <img src="https://images.pexels.com/photos/259588/pexels-photo-259588.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" srcset="" class="h-full object-cover" />
-        </div>
-        <div class="absolute bottom-0 flex h-full flex-col justify-end rounded-3xl bg-gradient-to-t from-neutral-900 p-10 opacity-0 duration-150 hover:opacity-100">
-          <h1 class="text-4xl font-bold text-slate-200">Serene Sunset Villa</h1>
-          <div class="mt-5 text-sm text-slate-300">Discover the allure of the Serene Sunset Villa, a contemporary haven nestled amidst lush landscapes and offering panoramic views of the ocean...</div>
-
-          <ul class="mt-5 flex justify-around">
-            <li class="flex items-center space-x-2">
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-bed text-white" width="22" height="22" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <path d="M7 9m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
-                <path d="M22 17v-3h-20" />
-                <path d="M2 8v9" />
-                <path d="M12 14h10v-2a3 3 0 0 0 -3 -3h-7v5z" />
-              </svg>
-              <span class="text-sm font-medium text-slate-300">4</span>
-            </li>
-            <li class="flex items-center space-x-2">
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-bath text-white" width="18" height="18" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <path d="M4 12h16a1 1 0 0 1 1 1v3a4 4 0 0 1 -4 4h-10a4 4 0 0 1 -4 -4v-3a1 1 0 0 1 1 -1z" />
-                <path d="M6 12v-7a2 2 0 0 1 2 -2h3v2.25" />
-                <path d="M4 21l1 -1.5" />
-                <path d="M20 21l-1 -1.5" />
-              </svg>
-              <span class="text-sm font-medium text-slate-300">3</span>
-            </li>
-            <li class="flex items-center space-x-2">
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-maximize text-white" width="18" height="18" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <path d="M4 8v-2a2 2 0 0 1 2 -2h2" />
-                <path d="M4 16v2a2 2 0 0 0 2 2h2" />
-                <path d="M16 4h2a2 2 0 0 1 2 2v2" />
-                <path d="M16 20h2a2 2 0 0 0 2 -2v-2" />
-              </svg>
-              <span class="text-sm font-medium text-slate-300">230m</span>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div id="property" class="relative col-span-1 aspect-[3/4] rounded-3xl bg-neutral-900">
-        <div class="aspect-[3/4] h-full overflow-hidden rounded-3xl bg-neutral-900">
-          <img src="https://images.pexels.com/photos/259588/pexels-photo-259588.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" srcset="" class="h-full object-cover" />
-        </div>
-        <div class="absolute bottom-0 flex h-full flex-col justify-end rounded-3xl bg-gradient-to-t from-neutral-900 p-10 opacity-0 duration-150 hover:opacity-100">
-          <h1 class="text-4xl font-bold text-slate-200">Serene Sunset Villa</h1>
-          <div class="mt-5 text-sm text-slate-300">Discover the allure of the Serene Sunset Villa, a contemporary haven nestled amidst lush landscapes and offering panoramic views of the ocean...</div>
-
-          <ul class="mt-5 flex justify-around">
-            <li class="flex items-center space-x-2">
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-bed text-white" width="22" height="22" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <path d="M7 9m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
-                <path d="M22 17v-3h-20" />
-                <path d="M2 8v9" />
-                <path d="M12 14h10v-2a3 3 0 0 0 -3 -3h-7v5z" />
-              </svg>
-              <span class="text-sm font-medium text-slate-300">4</span>
-            </li>
-            <li class="flex items-center space-x-2">
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-bath text-white" width="18" height="18" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <path d="M4 12h16a1 1 0 0 1 1 1v3a4 4 0 0 1 -4 4h-10a4 4 0 0 1 -4 -4v-3a1 1 0 0 1 1 -1z" />
-                <path d="M6 12v-7a2 2 0 0 1 2 -2h3v2.25" />
-                <path d="M4 21l1 -1.5" />
-                <path d="M20 21l-1 -1.5" />
-              </svg>
-              <span class="text-sm font-medium text-slate-300">3</span>
-            </li>
-            <li class="flex items-center space-x-2">
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-maximize text-white" width="18" height="18" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <path d="M4 8v-2a2 2 0 0 1 2 -2h2" />
-                <path d="M4 16v2a2 2 0 0 0 2 2h2" />
-                <path d="M16 4h2a2 2 0 0 1 2 2v2" />
-                <path d="M16 20h2a2 2 0 0 0 2 -2v-2" />
-              </svg>
-              <span class="text-sm font-medium text-slate-300">230m</span>
-            </li>
-          </ul>
+  <div id="appear" class="flex gap-5 p-5">
+    <div class="flex max-w-[40%] flex-wrap gap-5">
+      <div class="relative overflow-hidden rounded-3xl hover:scale-[0.98] duration-300 shadow-lg">
+        <img src="https://images.pexels.com/photos/2565222/pexels-photo-2565222.jpeg" alt="" srcset="" class="h-full object-cover" />
+        <div class="absolute bottom-0 flex h-full w-full flex-col justify-end rounded-3xl bg-gradient-to-t from-neutral-900/60 p-10 duration-150 hover:bg-neutral-900/40">
+          <h1 class="tracking-tight font-inter text-5xl font-black uppercase text-neutral-100">Nature Peace Village</h1>
         </div>
       </div>
     </div>
-    <div class="mt-10 flex w-full justify-end">
-      <button href="" class="flex items-center space-x-2 rounded-full bg-neutral-300 px-6 py-4 text-neutral-800 duration-200 hover:bg-neutral-800 hover:text-neutral-200">
-        <span>Explore Properties</span>
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-right" width="22" height="22" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-          <path d="M5 12l14 0" />
-          <path d="M13 18l6 -6" />
-          <path d="M13 6l6 6" />
-        </svg>
-      </button>
+    <div class="flex max-w-[60%] flex-wrap gap-5">
+      <div class="relative aspect-video overflow-hidden rounded-3xl hover:scale-[0.98] duration-300 shadow-lg">
+        <img src="https://images.pexels.com/photos/3701434/pexels-photo-3701434.jpeg" alt="" srcset="" class="h-full w-full object-cover" />
+        <div class="absolute bottom-0 flex h-full w-full flex-col justify-end rounded-3xl bg-gradient-to-t from-neutral-900/60 p-10 duration-150 hover:bg-neutral-900/40">
+          <h1 class="tracking-tight font-inter text-5xl font-black uppercase text-neutral-100">Herdade Quiet House</h1>
+        </div>
+      </div>
+      <div class="relative aspect-video overflow-hidden rounded-3xl hover:scale-[0.98] duration-300 shadow-lg">
+        <img src="https://images.pexels.com/photos/259588/pexels-photo-259588.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" srcset="" class="h-full w-full object-cover" />
+        <div class="absolute bottom-0 flex h-full w-full flex-col justify-end rounded-3xl bg-gradient-to-t from-neutral-900/60 p-10 duration-150 hover:bg-neutral-900/40">
+          <h1 class="tracking-tight font-inter text-5xl font-black uppercase text-neutral-100">Serene Sunset Villa</h1>
+        </div>
+      </div>
     </div>
   </div>
 </section>
 
-<section id="" class="relative w-full font-inter">
+
+<section class="relative w-full bg-neutral-800 bg-opacity-60 p-5 font-inter">
+  <marquee loop="infinite" behavior="scroll" direction="left" scrollamount="25" class="text-8xl font-black text-neutral-100">
+    Discover homes that fit your lifestyle.
+  </marquee>
+</section>
+
+
+
+<section class="relative w-full font-inter">
   <div class="relative mx-auto my-32 max-w-screen-2xl">
     <div class="my-10">
-      <span class="block pb-2 text-lg text-neutral-500">Search Property</span>
-      <h2 class="max-w-screen-lg text-5xl font-bold text-neutral-800">Find your ideal home with our advanced property search features</h2>
+      <span class="block pb-2 text-lg text-neutral-300">Search Property</span>
+      <h2 class="max-w-screen-lg text-5xl font-bold text-neutral-100">Find your ideal home with our advanced property search features</h2>
     </div>
     <div id="radio" class="grid max-w-sm grid-cols-3 gap-2 rounded-full bg-neutral-300">
       <div>
@@ -243,7 +132,7 @@
       </div>
     </div>
     <div id="search" class="relative mb-20 mt-10 flex max-w-md items-center justify-between gap-4 rounded-full border-4 border-neutral-300 p-3">
-      <input type="search" name="serch" placeholder="Enter City or ZIP Code" class="ml-4 flex w-full font-medium text-neutral-600 outline-none" />
+      <input type="search" name="search" placeholder="Enter City or ZIP Code" class="ml-4 flex w-full font-medium text-neutral-600 outline-none" />
       <button type="submit" class="flex aspect-square h-12 items-center justify-center rounded-full bg-blue-600 text-white">
         <svg class="h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve">
           <path d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z" />
