--- a/Presentation/DreamLuso.Angular/src/app/components/front-office/login-user/login-user.component.html
+++ b/Presentation/DreamLuso.Angular/src/app/components/front-office/login-user/login-user.component.html
@@ -1,4 +1,4 @@
-<section class="font-poppins relative grid grid-cols-2 grid-rows-6 items-center">
+<section class="font-poppins relative flex h-screen items-center">
   <!-- Vídeo de Fundo -->
   <div class="absolute inset-0 z-0">
     <video autoplay loop muted playsinline class="h-full w-full object-cover">
@@ -7,27 +7,23 @@
     </video>
   </div>
 
-  <div class="col-span-1 row-span-6 relative z-10">
-      <div class="mx-auto max-w-lg text-center">
-          <h1 class="text-2xl font-bold sm:text-3xl">Hello again!</h1>
-          <p class="mt-4 text-gray-500">Welcome back to Dolci Cerqueira, please insert your email and your password to log in.</p>
-      </div>
+  <div class="relative z-10 flex flex-col items-center justify-center mx-auto max-w-2xl text-center bg-neutral-800 bg-opacity-60 p-10 rounded-3xl">
+      <h1 class="text-2xl font-bold text-neutral-100 sm:text-3xl">Hello again!</h1>
+      <p class="mt-4 text-gray-200">Welcome back to DreamLuso, please insert your email and your password to log in.</p>
 
       <form method="post" class="mx-auto mt-8 mb-0 max-w-md space-y-4">
           <div>
               <label for="email" class="sr-only">Email</label>
-
               <div class="relative">
                   <input
                       id="email"
                       type="email"
                       [(ngModel)]="loginObj.email"
                       name="email"
-                      class="w-full rounded-lg border-gray-200 p-4 pr-12 text-sm shadow-sm"
+                      class="w-full max-w-xl rounded-lg border-neutral-300 p-4 pr-12 text-sm shadow-md"
                       placeholder="Enter email"
                       required
                   />
-
                   <span class="absolute inset-y-0 right-0 grid place-content-center px-4">
                       <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 12a4 4 0 10-8 0 4 4 0 008 0zm0 0v1.5a2.5 2.5 0 005 0V12a9 9 0 10-9 9m4.5-1.206a8.959 8.959 0 01-4.5 1.207" />
@@ -44,7 +40,7 @@
                       type="password"
                       [(ngModel)]="loginObj.password"
                       name="password"
-                      class="w-full rounded-lg border-gray-200 p-4 pr-12 text-sm shadow-sm"
+                      class="w-full max-w-xl rounded-lg border-neutral-300 p-4 pr-12 text-sm shadow-md"
                       placeholder="Enter password"
                       required
                   />
@@ -57,17 +53,16 @@
               </div>
           </div>
 
-          <div class="flex items-center justify-between">
-              <p class="text-sm text-gray-500">
+          <div class="flex items-center justify-between mt-6">
+              <p class="text-sm text-gray-300">
                   No account?
-                  <a class="underline" routerLink="/create-account">Sign up</a>
+                  <a class="underline text-white" routerLink="/create-account">Sign up</a>
               </p>
 
-              <button type="submit" class="inline-block rounded-full bg-pink px-5 py-3 text-sm font-medium text-white">Sign in</button>
+              <button type="submit" (click)="onLogin()"class="inline-block rounded-full bg-green-600 px-5 py-3 text-sm font-medium text-white transition duration-200 hover:bg-green-700">Sign in</button>
           </div>
       </form>
   </div>
 
-  <div class="relative col-span-1 row-span-6 h-screen bg-cake3 bg-cover bg-center">
-  </div>
+  <div class="relative col-span-1 row-span-6 h-screen bg-cake3 bg-cover bg-center"></div>
 </section>
